syntax = "proto3";

package com.road.yishi.proto.market;

message MarketItemSellInfoMsg {
  int32 templateId = 1;
  string sellTotal = 2;
  int32 sellMinPrice = 3;
  int32 purchaseMaxPrice = 4;
}
